--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -1,34 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="120dp"
     android:padding="16dp">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/img_avatar"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:background="@android:color/background_dark"/>
+        app:civ_border_color="#FF000000"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="vertical"
         android:layout_toRightOf="@+id/img_avatar"
-        android:layout_marginLeft="16dp">
+        android:layout_marginLeft="16dp"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/txt_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"/>
+            android:text="Name"
+            android:textColor="@android:color/primary_text_light"
+            android:layout_marginBottom="16dp"
+            android:textSize="20sp"/>
 
 
         <TextView
             android:id="@+id/txt_site_admin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Site Admin"/>
+            android:layout_width="80dp"
+            android:layout_height="24dp"
+            android:text="STAFF"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:textColor="@android:color/primary_text_dark"
+            android:background="@drawable/rounded_blue_background"/>
 
     </LinearLayout>
 
